Check for get/setrlimit.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -312,6 +312,9 @@ gt_LOCALE_FR
 gt_LOCALE_FR_UTF8
 gt_LOCALE_JA
 
+dnl Checks for functions for the tests/*.c tests.
+AC_CHECK_FUNCS_ONCE([getrlimit setrlimit])
+
 dnl Check whether to execute tests that rely on libasprintf.
 dnl This test must be consistent with gettext-runtime/configure.ac.
 if test "${enable_libasprintf+set}" = set; then
