New configure option --disable-curses.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gnulib-local directory of GNU gettext
-## Copyright (C) 2006-2007 Free Software Foundation, Inc.
+## Copyright (C) 2006-2008 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -250,6 +250,7 @@ m4/alloca.m4 \
 m4/backupfile.m4 \
 m4/ChangeLog.0 \
 m4/ChangeLog.1 \
+m4/curses.m4 \
 m4/exitfail.m4.diff \
 m4/gcj.m4 \
 m4/hard-locale.m4.diff \
