Switch to libtool-2.2.2.

--- a/autoconf-lib-link/configure.ac
+++ b/autoconf-lib-link/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the autoconf-lib-link directory of GNU gettext
-dnl Copyright (C) 1995-1999, 2000-2003, 2005 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-1999, 2000-2003, 2005-2006, 2008 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -38,8 +38,7 @@ AC_EXEEXT
 
 dnl Check for build configuration.
 gl_WOE32_DLL
-AC_LIBTOOL_WIN32_DLL
-AC_PROG_LIBTOOL
+LT_INIT([win32-dll])
 
 dnl Checks for libraries.
 
