Do fuzzy matching by calling message_fuzzy_index_search on a hashed index, rather than through message_list_search_fuzzy.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -129,6 +129,7 @@ LIBGREP = ../libgrep/libgrep.a
 
 # Source dependencies.
 msgcmp_SOURCES = msgcmp.c
+msgcmp_SOURCES += msgl-fsearch.c
 msgfmt_SOURCES = msgfmt.c
 msgfmt_SOURCES += \
   write-mo.c write-java.c write-csharp.c write-resources.c write-tcl.c \
