Updated by gnulib-tool.

--- a/gettext-tools/gnulib-lib/.cvsignore
+++ b/gettext-tools/gnulib-lib/.cvsignore
@@ -357,3 +357,33 @@ sig-handler.h
 sigaction.c
 unistd--.h
 unistd-safer.h
+sigpipe-die.c
+sigpipe-die.h
+concat-filename.h
+xconcat-filename.c
+errno.in.h
+alloca.c
+stdio-write.c
+sys_select.in.h
+sys_socket.in.h
+winsock-select.c
+winsock.c
+write.c
+rawmemchr.c
+rawmemchr.valgrind
+sched.in.h
+spawn.in.h
+spawn_faction_addclose.c
+spawn_faction_adddup2.c
+spawn_faction_addopen.c
+spawn_faction_destroy.c
+spawn_faction_init.c
+spawn_int.h
+spawnattr_destroy.c
+spawnattr_init.c
+spawnattr_setflags.c
+spawnattr_setsigmask.c
+spawni.c
+spawnp.c
+strchrnul.c
+strchrnul.valgrind
