--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -88,7 +88,13 @@ gtpo_EARLY
 dnl Check for build configuration.
 
 gl_WOE32_DLL
+
 LT_INIT([win32-dll])
+
+dnl Prepares the libtool configuration for handling of Windows resources, and
+dnl sets the RC variable to a program that compiles Windows resource files.
+LT_LANG([Windows Resource])
+
 case "$host_os" in
   # On Cygwin, without -no-undefined, a warning is emitted and only a static
   # library is built.
